--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,11 +7,11 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "com.example.virusgame"
+        applicationId "barker.viruswiper"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
-        versionName "0.2"
+        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
